kubernetes/apps/apps/navidrome/navidrome/app/statefulset.yaml
---
# yaml-language-server: $schemaasd
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &name navidrome
  labels:
    app: &label navidrome-app
spec:
  serviceName: *name
  replicas: 1
  selector:
    matchLabels:
      app: *label
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: *label
    spec:
      # initContainers:
      #   - name: 'prepare-data'
      #     image: 'instrumentisto/rsync-ssh:alpine3.18.3'
      #     command: ["/bin/sh"]  # Override the entrypoint
      #     args: ["-c", "/startup.sh" ]
      #     envFrom:
      #     - secretRef:
      #         name: home-local-syncthing-env
      #     securityContext:
      #       privileged: true
      #     volumeMounts:
      #       - name: navidrome-data-folder
      #         mountPath: /data
      #       - name: prepare-data
      #         mountPath: /startup.sh
      #         subPath: startup.sh
      # - name: 'prepare-music'
      #   image: 'instrumentisto/rsync-ssh:alpine3.18.3'
      #   command: ["/bin/sh"]  # Override the entrypoint
      #   args: ["-c", "sleep 9999" ] 
      #   # args: ["-c", "/startup.sh" ]
      #   envFrom:
      #   - secretRef:
      #       name: home-local-syncthing-env
      #   securityContext:
      #     privileged: true
      #   volumeMounts:
      #     - name: pv-navidrome-music
      #       mountPath: /music
      #     - name: sync-music
      #       mountPath: /startup.sh
      #       subPath: startup.sh
      #     - name: nfs-vol
      #       mountPath: /mnt
      containers:
      - name: navidrome
        image: bornav/navidrome-bornav-test-cloud-sync:0.58.0
        # command: ["/bin/sh"]  # Override the entrypoint
        # args: ["-c", "sleep 8400" ]
        resources:
          limits:
            cpu: 1500m
            memory: 1000M
          requests:
            cpu: 1m
            memory: 500M
        # securityContext:
        #   # runAsGroup: 1000
        #   # runAsUser: 0
        #   privileged: true
        #   # capabilities:
        #   #   add:
        #   #     - NET_ADMIN
        volumeMounts:
        - mountPath: /config/navidrome.toml
          name: navidrome-configuration
          subPath: navidrome.toml
        - name: navidrome-data-folder
          mountPath: /data
        - name: pv-navidrome-music
          mountPath: /music
          # - name: 'sync-data'
          #   image: 'instrumentisto/rsync-ssh:alpine3.18.3'
          #   command: ["/bin/sh"]  # Override the entrypoint
          #   args: ["-c", "/startup.sh" ]
          #   envFrom:
          #   - secretRef:
          #       name: home-local-syncthing-env
          #   securityContext:
          #     privileged: true
          #   resources:
          #     limits:
          #       cpu: 100G
          #       memory: 1000M
          #     requests:
          #       cpu: 100m
          #       memory: 500M
          #   volumeMounts:
          #     - name: navidrome-data-folder
          #       mountPath: /data
          #     - name: sync-data
          #       mountPath: /startup.sh
          #       subPath: startup.sh
      - name: 'sync-music'
        image: 'instrumentisto/rsync-ssh:alpine3.18.3'
        command: ["/bin/sh"]  # Override the entrypoint
        args: ["-c", "/startup.sh" ]
        securityContext:
          privileged: true
        resources:
          limits:
            # cpu: 1G
            memory: 100M
          requests:
            cpu: 1m
            memory: 1M
        volumeMounts:
          - name: pv-navidrome-music
            mountPath: /music
          - name: sync-music-continuous
            mountPath: /startup.sh
            subPath: startup.sh
          # - name: nfs-vol
          #   mountPath: /mnt
      # - name: go-instrumentation-sidecart
      #   image: otel/autoinstrumentation-go:v0.14.0-alpha
      #   imagePullPolicy: IfNotPresent
      #   env:
      #     - name: OTEL_GO_AUTO_TARGET_EXE
      #       value: /app/navidrome
      #     - name: OTEL_EXPORTER_OTLP_ENDPOINT
      #       value: "https://otel-col.cloud.icylair.com"
      #     - name: OTEL_SERVICE_NAME
      #       value: "net-forwarder"
      #     - name: OTEL_PROPAGATORS
      #       value: "tracecontext,baggage"
      #     - name: OTEL_GO_AUTO_SHOW_VERIFIER_LOG
      #       value: "true"
      #     - name: OTEL_GO_AUTO_GLOBAL
      #       value: "true"
      #   securityContext:
      #     runAsUser: 0
      #     privileged: true
      # shareProcessNamespace: true
      volumes:
      - name: navidrome-configuration
        configMap:
          name: navidrome-config
          defaultMode: 0777
      - name: navidrome-data-folder
        persistentVolumeClaim:
          claimName: pv-navidrome-data
      - name: pv-navidrome-music
        persistentVolumeClaim:
          claimName: pv-navidrome-music
      - name: sync-music
        secret:
          secretName: sync-music
          defaultMode: 0777
      - name: prepare-data
        secret:
          secretName: prepare-data
          defaultMode: 0777
      - name: sync-data
        secret:
          secretName: sync-data
          defaultMode: 0777
      - name: sync-music-continuous
        secret:
          secretName: sync-music-continuous
          defaultMode: 0777
      # - name: nfs-vol
      #   nfs:
          #     server: 10.43.255.250 # IP to our NFS server
          #     # server: wireguard.network.svc.cluster.local # IP to our NFS server
          #     path: /mnt/vega/vega/multimedia/MusicLibrary # The exported directory
      restartPolicy: Always
