kubernetes/apps/apps/navidrome/navidrome/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
spec:
  selector:
    app: navidrome-app
  ports:
    - name: http
      targetPort: 4533
      port: 4533
